# bookable-event-logger

./: CONTRACT.md  README.md
csharp/: Bookable.EventLogger.csproj  EventLogger.cs  README.md
node/: README.md  index.js  package.json
python/: README.md  pyproject.toml
python/bookable_event_logger/: logger.py
